Added all nessecary section in the HTML
Added header section with the name of this project in h1
Added the section for the article with the image
Added the buttons to move the carrousel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <section class="wrapper"></section>
+    <section class="wrapper">
+      <header>
+        <h1>presentation</h1>
+      </header>
+      <button class="left"></button>
+      <article>
+        <h2>Title for Article</h2>
+        <figure>
+          <img src="image1.png" alt="Image 1" srcset="" />
+          <figcaption>Caption for the image</figcaption>
+        </figure>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi,
+          alias! Dicta, odio in? Voluptates voluptatem consequatur alias, eos
+          quos, eveniet similique incidunt minus ipsa nam laborum? Nam ad
+          laudantium quod. Qui voluptates quia corrupti quis enim cumque libero
+          provident expedita!
+        </p>
+      </article>
+      <button class="right"></button>
+    </section>
     <script src="./scripts/main.js"></script>
   </body>
 </html>
