Still in progress
Getting all functions in place - js

--- a/index.html
+++ b/index.html
@@ -5,29 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Presentation</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <section class="wrapper">
-      <header>
-        <h1>presentation</h1>
-      </header>
-      <button class="left"></button>
-      <article>
-        <h2>Title for Article</h2>
-        <figure>
-          <img src="image1.png" alt="Image 1" srcset="" />
-          <figcaption>Caption for the image</figcaption>
-        </figure>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi,
-          alias! Dicta, odio in? Voluptates voluptatem consequatur alias, eos
-          quos, eveniet similique incidunt minus ipsa nam laborum? Nam ad
-          laudantium quod. Qui voluptates quia corrupti quis enim cumque libero
-          provident expedita!
-        </p>
-      </article>
-      <button class="right"></button>
-    </section>
+    <container data-presentation="wrapper" class="wrapper">
+      <section data-presentation="presentation" class="presentation">
+        <button
+          data-presentation="button-carrousel"
+          class="left-button button-carrousel"
+        >
+          <span data-presentation="span-image" class="image"></span>
+        </button>
+        <button
+          data-presentation="button-carrousel"
+          class="right-button button-carrousel"
+        >
+          <span data-presentation="span-image" class="image"></span>
+        </button>
+        <header data-presentation="header">
+          <h1>presentation</h1>
+        </header>
+        <article data-presentation="article">
+          <h2 data-presentation="article-h2">Title for Article</h2>
+          <figure data-presentation="article-figure">
+            <img
+              data-presentation="article-figure-img"
+              src="./images/image1.PNG"
+              alt="Image 1"
+              srcset=""
+            />
+            <figcaption data-presentation="article-figure-figcaption">
+              The homepage of mpdev.nl
+            </figcaption>
+          </figure>
+          <p data-presentation="article-p">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi,
+            alias! Dicta, odio in? Voluptates voluptatem consequatur alias, eos
+            quos, eveniet similique incidunt minus ipsa nam laborum? Nam ad
+            laudantium quod. Qui voluptates quia corrupti quis enim cumque
+            libero provident expedita!
+          </p>
+        </article>
+        <button
+          data-presentation="article-show-more-button"
+          class="show-more"
+        ></button>
+      </section>
+    </container>
     <script src="./scripts/main.js"></script>
   </body>
 </html>
