Added content, functions and html & css
This is the baseline of what I want for this project

--- a/index.html
+++ b/index.html
@@ -13,17 +13,65 @@
     />
   </head>
   <body>
-    <container data-presentation="wrapper" class="wrapper">
+    <container data-presentation="wrapper" class="wrapper wrapper1">
       <section data-presentation="presentation" class="presentation">
         <button
           data-presentation="button-carrousel"
-          class="left-button button-carrousel"
+          class="left-button button-wrapper1 button-carrousel"
         >
           <span data-presentation="span-image" class="image"></span>
         </button>
         <button
           data-presentation="button-carrousel"
-          class="right-button button-carrousel"
+          class="right-button button-wrapper1 button-carrousel"
+        >
+          <span data-presentation="span-image" class="image"></span>
+        </button>
+        <header data-presentation="header">
+          <h1>Presentation</h1>
+        </header>
+        <article data-presentation="article">
+          <h2 data-presentation="article-h2">tpsnederland</h2>
+          <figure data-presentation="article-figure">
+            <a href="http://tpsnederland.nl">
+              <img
+                data-presentation="article-figure-img"
+                src="./images/tpsnederland.PNG"
+                alt="Image 1"
+                srcset=""
+              />
+            </a>
+            <figcaption data-presentation="article-figure-figcaption">
+              The homepage of mpdev.nl
+            </figcaption>
+          </figure>
+          <p data-presentation="article-p">
+            Dit is een van mijn eerste sites die ik heb gemaakt voor een klant.
+            Deze klant heb ik leren kennen via mijn huidige werk. Ik heb dit
+            gratis voor hem gemaakt. Het is een vrij simple vormgegevende site
+            gemaakt in wordpress middels een eigen gemaakt template. Ik heb hier
+            de benodigde kennis opgedaan om het wordpress systeem voor een
+            gedeelte mijn eigen te maken. De vormgeving heb ik grotendeels met
+            bootstrap vormgegeven.
+          </p>
+        </article>
+        <button
+          data-presentation="article-show-more-button"
+          class="show-more"
+        ></button>
+      </section>
+    </container>
+    <container data-presentation="wrapper" class="wrapper wrapper2">
+      <section data-presentation="presentation" class="presentation">
+        <button
+          data-presentation="button-carrousel"
+          class="left-button button-wrapper2 button-carrousel"
+        >
+          <span data-presentation="span-image" class="image"></span>
+        </button>
+        <button
+          data-presentation="button-carrousel"
+          class="right-button button-wrapper2 button-carrousel"
         >
           <span data-presentation="span-image" class="image"></span>
         </button>
@@ -31,24 +79,78 @@
           <h1>presentation</h1>
         </header>
         <article data-presentation="article">
-          <h2 data-presentation="article-h2">Title for Article</h2>
+          <h2 data-presentation="article-h2">Ecriminology Research</h2>
           <figure data-presentation="article-figure">
-            <img
-              data-presentation="article-figure-img"
-              src="./images/image1.PNG"
-              alt="Image 1"
-              srcset=""
-            />
+            <a
+              href="http://85.150.6.214/websites-local-use/ecriminologyresearch/"
+            >
+              <img
+                data-presentation="article-figure-img"
+                src="./images/criminologyresearch.PNG"
+                alt="Image 1"
+                srcset=""
+              />
+            </a>
             <figcaption data-presentation="article-figure-figcaption">
               The homepage of mpdev.nl
             </figcaption>
           </figure>
           <p data-presentation="article-p">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi,
-            alias! Dicta, odio in? Voluptates voluptatem consequatur alias, eos
-            quos, eveniet similique incidunt minus ipsa nam laborum? Nam ad
-            laudantium quod. Qui voluptates quia corrupti quis enim cumque
-            libero provident expedita!
+            Dit is een site waar ik vrij lang aan heb gewerkt. Dit heb ik in
+            opdracht van een betaalde klant gemaakt. Van design tot volledige
+            wordpress template met enige functies waarbij een mailinglist
+            verstuurd kon worden. Deze site is niet meer actief. Ik kan deze
+            daarom alleen van me lokale thuis-server draaien om het te laten
+            zien. Lang niet alle functies werken dan ook, en ik heb alleen de
+            niet wordpress versie te laten zien.
+          </p>
+        </article>
+        <button
+          data-presentation="article-show-more-button"
+          class="show-more"
+        ></button>
+      </section>
+    </container>
+    <container data-presentation="wrapper" class="wrapper wrapper3">
+      <section data-presentation="presentation" class="presentation">
+        <button
+          data-presentation="button-carrousel"
+          class="left-button button-wrapper3 button-carrousel"
+        >
+          <span data-presentation="span-image" class="image"></span>
+        </button>
+        <button
+          data-presentation="button-carrousel"
+          class="right-button button-wrapper3 button-carrousel"
+        >
+          <span data-presentation="span-image" class="image"></span>
+        </button>
+        <header data-presentation="header">
+          <h1>Presentation</h1>
+        </header>
+        <article data-presentation="article">
+          <h2 data-presentation="article-h2">MPDEV</h2>
+          <figure data-presentation="article-figure">
+            <a href="https://mpdev.nl">
+              <img
+                data-presentation="article-figure-img"
+                src="./images/image1.PNG"
+                alt="Image 1"
+                srcset=""
+              />
+            </a>
+            <figcaption data-presentation="article-figure-figcaption">
+              The homepage of mpdev.nl
+            </figcaption>
+          </figure>
+          <p data-presentation="article-p">
+            Dit is mijn huidige portofolio pagina. Hij is nog volledig in
+            onderhoud. De leuke eigenschappen zijn bijvoorbeeld de animaties en
+            de vormgeving. Dit heb ik op basis gemaakt van een figma design. De
+            bedoeling is dat ik bij elk idee of alles wat in mijn backlog komt
+            te staan hier aan te werken. Ik maak gebruik van trello en github om
+            alles georganiseerd bij te houden. Talen die ik hiervoor heb
+            gebruikt zijn: html, css & javascript.
           </p>
         </article>
         <button
